<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.topfootballtips.topfootballtip.ui.activities.MainActivity"
    tools:showIn="@layout/activity_main">
    <LinearLayout
        android:id="@+id/upper_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:weightSum="12"
        style="?android:attr/buttonStyle">
        <Button
            android:id="@+id/btn_free_bet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_very_small"
            android:text="@string/free_bet_text"
            android:textAllCaps="true"
            android:layout_weight="4"
            android:textSize="@dimen/buttons_text_size"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_main_states"
            android:textStyle="bold"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/btn_vip_bet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_very_small"
            android:text="@string/vip_bet_text"
            android:textAllCaps="true"
            android:layout_weight="4"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_main_states"
            android:textStyle="bold"
            android:textSize="@dimen/buttons_text_size"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/btn_risk_bet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_very_small"
            android:text="@string/risk_bet_text"
            android:textAllCaps="true"
            android:layout_weight="4"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_main_states"
            android:textStyle="bold"
            android:textSize="@dimen/buttons_text_size"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/list_fragment_holder"
        android:layout_below="@+id/upper_buttons"
        android:layout_above="@+id/lower_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </FrameLayout>
    <LinearLayout
        android:id="@+id/lower_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:weightSum="12"
        style="?android:attr/buttonStyle">
        <Button
            android:id="@+id/btn_danger_matches"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_very_small"
            android:text="@string/danger_matches_text"
            android:textAllCaps="true"
            android:layout_weight="4"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_main_states"
            android:textStyle="bold"
            android:textSize="@dimen/buttons_text_size"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/btn_rate_us"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_very_small"
            android:text="@string/rate_us_text"
            android:textAllCaps="true"
            android:layout_weight="4"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_main_states"
            android:textStyle="bold"
            android:textSize="@dimen/buttons_text_size"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/btn_get_vip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_tiny"
            android:text="@string/get_vip"
            android:textAllCaps="true"
            android:layout_weight="4"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_main_states"
            android:textStyle="bold"
            android:textSize="@dimen/buttons_text_size"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
</RelativeLayout>
